<resources>
    <string name="app_name">GamePoint</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_news" translatable="false">News</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>

    <string name="favorite_image_description">Image containing the cover of the game %s</string>
    <string name="footer_news_button_text">View More</string>
    <string name="favorite_game_text">Your favorites Games</string>
    <string name="developers">Developers</string>
    <string name="publisher">Publisher</string>
    <string name="windows_specifications">Windows specifications</string>
    <string name="mac_specifications">Mac specifications</string>
    <string name="linux_specifications">Linux specifications</string>
    <string name="hint_search_edit_text">Search for the game</string>
    <string name="search_button_text">Search Button</string>
    <string name="latest_research_text">Latest Searches</string>
    <string name="search_results_text">Search results:</string>
    <string name="content_description_news">Image containing the thumbnail of the news: %s</string>
    <string name="content_description_screenshot">Image containing a screenshot of the game</string>
    <string name="content_description_shimmer_image">Image for the shimmer</string>
    <string name="content_description_game_searched">Image containing the cover of %s</string>
    <string name="rating_star_image">star rating symbol</string>
    <string name="profile_image_comment">Profile picture of the user %s</string>
    <string name="no_elements_text">No elements</string>

    <string name="messages_header">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="no_games">No Item Found</string>

    <string name="description_store_icon">Image containing the %s store logo</string>
    <string name="cancel_item">Cancell Item</string>
    <string name="content_description_image_header_result">Cover image by %s</string>
    <string name="favorite_content_description">button to save the game as a favorite</string>
    <string name="share_content_description">button to share the game</string>
    <string name="description_tab_item">Description</string>
    <string name="gallery_tab_item">Gallery</string>
    <string name="specifications_tab_item">Specifications</string>
    <string name="comments_tab_item">Comments</string>
    <string name="no_result">No Result</string>

    <string name="share_game_text">Look what a nice game I found: </string>
    <string name="added_on_favorite">Game added to favorites</string>
    <string name="removed_from_favorite">Game removed from favorites</string>
    <string name="developers_title">Developers:</string>
    <string name="publishers_title">Publishers:</string>
    <string name="web_site_title">Web Site:</string>
    <string name="metacritic_score_title" translatable="false">Metacritic:</string>
    <string name="categories_title">Categories:</string>
    <string name="genres_title">Genres:</string>
    <string name="languages_title">Languages</string>
    <string name="requirements">Requirements</string>
    <string name="no_elements" translatable="false">N.A.</string>
    <string name="content_description_pegi">Image containing the pegi of the game</string>
    <string name="features_for_console_title">Features for consoles</string>
    <string name="subgenres_title">SubGenres:</string>
    <string name="voice_title">Voice</string>
    <string name="subtitle_title">Subtitle</string>
    <string name="console_supported_title">Supported consoles</string>
    <string name="no_comment">No Comment</string>
    <string name="comment_button_description">Button to add a new comment</string>
    <string name="button_to_change_image_description">Button for change profile image</string>
    <string name="log_out" translatable="false">Log Out</string>
    <string name="play_trailer_button">play trailer button</string>
    <string name="trailer" translatable="false">Trailer</string>
    <string name="email_regex" translatable="false"><![CDATA[^[\\w!#$%&\'*+/=?`{|}~^-]+(?:\\.[\\w!#$%&\'*+/=?`{|}~^-]+)*@(?:[a-zA-Z0-9-]+\\.)+[a-zA-Z]{2,6}$]]></string>
    <string name="password_regex" translatable="false">^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z]).{6,20}$</string>
    <string name="email" translatable="false">EMAIL</string>
    <string name="password" translatable="false">PASSWORD</string>
    <string name="login" translatable="false">Login</string>
    <string name="registration">Not registered yet? SIGN UP</string>
    <string name="wrong_email">Please enter a valid email</string>
    <string name="wrong_password">Please enter a valid password.</string>
    <string name="login_error">Error during login, please try again in a few seconds</string>
    <string name="name">NAME</string>
    <string name="surname">SURNAME</string>
    <string name="sign_in">Do you already have an account? SIGN IN</string>
    <string name="create_user">Create User</string>
    <string name="error_registration">Enter all information correctly</string>
    <string name="wrong_name">Please enter your name</string>
    <string name="wrong_surname">Please enter your surname</string>
    <string name="password_elements">The password must contain:\n- at least 6 characters</string>
    <string name="special_offers">Special Offers</string>
    <string name="no_offer">No Offer</string>
    <string name="remove_favorite">Game removed from favorites</string>
    <string name="error_favorite_delete">Error removing, try again later</string>
    <string name="favorite_add">Game added to your favorites</string>
    <string name="error_add_favorite">Unable to bookmark the game, please try again in a few seconds</string>
    <string name="not_get_user_id">Unable to get user information</string>
    <string name="loading">Loading…</string>
    <string name="copy_on_clipboard">URL copied to clipboard</string>
    <string name="open_icon_description">News opening icon</string>
    <string name="open">Open</string>
    <string name="copy_icon_description">Copy link icon</string>
    <string name="copy_link">Copy link</string>
    <string name="news_sharing_icon">News sharing icon</string>
    <string name="share">Share</string>
    <string name="game_deleted">Game Deleted</string>
    <string name="price">Price:\n %s%s</string>
    <string name="release_data">Release date:\n%s</string>
    <string name="price_symbol" translatable="false">€</string>
    <string name="coming_soon">Coming soon</string>
    <string name="free" translatable="false">free</string>
    <string name="n_a" translatable="false">n.a.</string>
    <string name="video_trailer_description" translatable="false">Thumbnail video trailer</string>
    <string name="close_gallery_button">Close gallery button</string>
    <string name="comment_added">Comment added</string>
    <string name="error_comment">Error: Please try again in a few seconds</string>
    <string name="add_description">Add Description</string>

    <string name="forgot_password">Forgot your password? CLICK HERE</string>
    <string name="reset_password_instruction">To reset password, enter your email, press the button and check mail to follow instruction.</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset" translatable="false">RESET</string>
    <string name="your_email">YOUR EMAIL</string>
    <string name="fail_reset_password">Fail to send reset password email!</string>
    <string name="successful_reset_password">Check email to reset your password!</string>
    <string name="settings">SETTINGS</string>
    <string name="information">INFORMATION</string>
    <string name="change">CHANGE</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="email_upper_camel_case" translatable="false">Email</string>
    <string name="password_changed">Password Changed</string>
    <string name="error_change_password">Error to change password</string>
    <string name="your_profile_picture">Your profile picture</string>
    <string name="change_shops">Change Shops</string>
    <string name="change_password">Change your Password</string>
    <string name="change_display_name">Change your NickName</string>
    <string name="settings_image">Settings icon</string>
    <string name="password_change_image">Password change icon</string>
    <string name="picture_of_the_nickname_change">Nickname change icon</string>
    <string name="new_nickname">New NickName</string>
    <string name="change_your_nickname">Change your NickName</string>
    <string name="change_nickname_description">The nickname you choose will be visible to other users. By default, your nickname consists of your first and last name</string>
    <string name="error_nickname">Enter a nickname of at least 4 characters</string>
    <string name="correct_change_nickname">nickname changed successfully</string>
    <string name="error_change_nickname">Unable to change your nickname, please try again in a few seconds</string>
    <string name="app_icon">App Icon</string>
    <string name="shop_title">List of shops that can be used</string>
    <string name="welcome_back">Welcome Back %s</string>
    <string name="email_already_associated">This email is already associated with a user</string>
    <string name="registration_failed">Registration failed, try again later</string>
    <string name="success_upload_image">Image uploaded successfully</string>
    <string name="error_upload_image">Unable to update profile picture</string>
    <string name="user_log_out">User Signed Out</string>
    <string name="enter_title_to_search">Enter the title of the game you want to search…</string>
    <string name="any_price">Unavailable</string>
    <string name="null_item" translatable="false"> </string>
    <string name="free_price">free</string>
    <string name="coming_soon_price">Coming soon</string>
</resources>