<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".ui.news.NewsDialog">

    <LinearLayout
        android:id="@+id/openNewsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ten_value"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/open_icon_description"
            android:scaleType="centerInside"
            android:scaleX="2"
            android:scaleY="2"
            app:srcCompat="@drawable/icon_open"
            app:tint="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:padding="@dimen/ten_value"
            android:text="@string/open"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/silver" />

    </LinearLayout>

    <View
        android:layout_width="@dimen/separation_view_width"
        android:layout_height="@dimen/separation_view_height"
        android:layout_gravity="center"
        android:layout_margin="@dimen/ten_value"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/copyNewsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/ten_value"
        android:clickable="true"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/copy_icon_description"
            app:srcCompat="@drawable/icon_copy_element"
            app:tint="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:padding="@dimen/ten_value"
            android:text="@string/copy_link"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/silver" />
    </LinearLayout>

    <View
        android:layout_width="@dimen/separation_view_width"
        android:layout_height="@dimen/separation_view_height"
        android:layout_gravity="center"
        android:layout_margin="@dimen/ten_value"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/shareNewsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ten_value"
        android:clickable="true"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/news_sharing_icon"
            app:srcCompat="@drawable/icon_share"
            app:tint="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:padding="@dimen/ten_value"
            android:text="@string/share"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/silver" />
    </LinearLayout>

</LinearLayout>