<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/forgot_your_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/reset_password_instruction" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailResetLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColorHint="@color/silver"
            app:boxStrokeErrorColor="@color/red"
            app:errorEnabled="true"
            app:errorIconTint="@color/red"
            app:errorTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:errorTextColor="@color/red">

            <EditText
                android:id="@+id/emailReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="@color/dark_cyan"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/your_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/silver"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:backgroundTint="@color/dark_cyan"
            android:text="@string/reset"
            android:textColor="#000000" />
    </LinearLayout>
</layout>