<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.profile.ChangeDisplayNameFragment">

    <data />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/ten_value"
            android:text="@string/change_your_nickname"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_value"
            android:gravity="center_horizontal"
            android:padding="@dimen/ten_value"
            android:text="@string/change_nickname_description" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/changeNickNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColorHint="@color/silver"
            app:errorTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:endIconMode="clear_text">

            <EditText
                android:id="@+id/changeNickName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="@color/dark_cyan"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/new_nickname"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/silver"
                tools:ignore="SpeakableTextPresentCheck,TextFields" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/changeNickNameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:backgroundTint="@color/dark_cyan"
            android:text="@string/change"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</layout>