<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.profile.ChangePasswordFragment">

    <data />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_layout"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/ten_value"
            android:text="@string/change_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailChangePasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColorHint="@color/silver"
            app:boxStrokeErrorColor="@color/red"
            app:errorEnabled="true"
            app:errorIconTint="@color/red"
            app:errorTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:errorTextColor="@color/red"
            app:endIconMode="clear_text">

            <EditText
                android:id="@+id/changePasswordEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="@color/dark_cyan"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email_upper_camel_case"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/silver"
                tools:ignore="SpeakableTextPresentCheck,TextFields" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/oldPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColorHint="@color/silver"
            android:visibility="visible"
            app:boxStrokeErrorColor="@color/red"
            app:errorEnabled="true"
            app:errorIconTint="@color/red"
            app:errorTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:errorTextColor="@color/red"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/oldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="@color/dark_cyan"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/old_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/silver"
                tools:ignore="SpeakableTextPresentCheck" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColorHint="@color/silver"
            android:visibility="visible"
            app:boxStrokeErrorColor="@color/red"
            app:errorEnabled="true"
            app:errorIconTint="@color/red"
            app:errorTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:errorTextColor="@color/red"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="@color/dark_cyan"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/new_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/silver"
                tools:ignore="SpeakableTextPresentCheck" />


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/changeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:backgroundTint="@color/dark_cyan"
            android:text="@string/change"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</layout>